--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="gradient">
-	<h1>Background Generator</h1>
+	<h1>Background Generator!!</h1>
 	<input oninput="setBackgroundColor('frominput')" class= "color1" type="color" name="color1" value="#00ff00">
 	<input oninput="setBackgroundColor('frominput')" class ="color2" type="color" name="color2" value="#ff0000">
 	<h2></h2>
